[gd_scene load_steps=19 format=3 uid="uid://gvye6ccvjd55"]

[ext_resource type="Script" path="res://classes/Stat.gd" id="2_0br1h"]
[ext_resource type="PackedScene" uid="uid://crylwoyahw6go" path="res://ui/info_panel.tscn" id="2_8k6rt"]
[ext_resource type="PackedScene" uid="uid://d3ek2vmqvfst3" path="res://abilities/weapon/light_cannon/light_cannon.tscn" id="2_dqgwh"]
[ext_resource type="PackedScene" uid="uid://b4v2b4cphju7v" path="res://ui/debug_menu.tscn" id="3_bx4mw"]
[ext_resource type="PackedScene" uid="uid://ccgupredk0a3f" path="res://player/player.tscn" id="3_d6lla"]
[ext_resource type="PackedScene" uid="uid://dxv4bwsrldkqn" path="res://ui/minimap.tscn" id="4_u66eo"]
[ext_resource type="Script" path="res://environment/AsteroidSpawner.gd" id="5_hea7j"]
[ext_resource type="Script" path="res://pickups/PickupSpawner.gd" id="6_0lnqi"]
[ext_resource type="Script" path="res://enemies/EnemySpawner.gd" id="6_xg0x2"]
[ext_resource type="Script" path="res://classes/RunMonitor.gd" id="9_dl15g"]
[ext_resource type="Script" path="res://ui/world/HitNumberSpawner.gd" id="10_mwqnm"]
[ext_resource type="Script" path="res://ui/world/HealthBarSpawner.gd" id="11_bnywn"]

[sub_resource type="Resource" id="Resource_050sd"]
resource_local_to_scene = true
script = ExtResource("2_0br1h")
use_min_value = true
use_max_value = false
base = 100.0
round_mode = 0
min_value = 1.0

[sub_resource type="Resource" id="Resource_mcb62"]
resource_local_to_scene = true
script = ExtResource("2_0br1h")
use_min_value = true
use_max_value = false
base = 5.0
round_mode = 0
min_value = 0.1

[sub_resource type="Resource" id="Resource_0bxhg"]
resource_local_to_scene = true
script = ExtResource("2_0br1h")
use_min_value = true
use_max_value = false
base = 10.0
round_mode = 0
min_value = 1.0

[sub_resource type="Resource" id="Resource_lf6v1"]
resource_local_to_scene = true
script = ExtResource("2_0br1h")
use_min_value = true
use_max_value = false
base = 1.0
round_mode = 4
min_value = 1.0

[sub_resource type="Resource" id="Resource_ovy6f"]
resource_local_to_scene = true
script = ExtResource("2_0br1h")
use_min_value = true
use_max_value = false
base = 1000.0
round_mode = 0
min_value = 0.0

[sub_resource type="Resource" id="Resource_xmr86"]
resource_local_to_scene = true
script = ExtResource("2_0br1h")
use_min_value = true
use_max_value = false
base = 8.0
round_mode = 0
min_value = 1.0

[node name="Main" type="Node"]

[node name="Player" parent="." instance=ExtResource("3_d6lla")]
max_health = SubResource("Resource_050sd")

[node name="LightCannon" parent="Player" instance=ExtResource("2_dqgwh")]
fire_rate = SubResource("Resource_mcb62")
damage = SubResource("Resource_0bxhg")
projectile_count = SubResource("Resource_lf6v1")
projectile_speed = SubResource("Resource_ovy6f")
projectile_size = SubResource("Resource_xmr86")

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("6_xg0x2")
spawn_rate = 25.0

[node name="AsteroidSpawner" type="Node" parent="."]
script = ExtResource("5_hea7j")
asteroid_count = 10.0
max_linear_momentum = 20.0
spawn_distance = 8000.0
despawn_distance = 10000.0

[node name="PickupSpawner" type="Node" parent="."]
script = ExtResource("6_0lnqi")

[node name="HitNumberSpawner" type="Node" parent="."]
script = ExtResource("10_mwqnm")
enable_on_player = true
player_color = Color(1, 0.454902, 0.478431, 1)
enable_on_enemy = true
enemy_color = Color(0.517647, 0.513726, 1, 1)

[node name="HealthBarSpawner" type="Node" parent="."]
script = ExtResource("11_bnywn")

[node name="RunMonitor" type="Node" parent="."]
script = ExtResource("9_dl15g")
score_req_base = 50.0
score_req_growth = 10.0

[node name="UILayer" type="CanvasLayer" parent="." groups=["UILayer"]]
layer = 2

[node name="InfoPanel" parent="UILayer" node_paths=PackedStringArray("player", "run_monitor") instance=ExtResource("2_8k6rt")]
player = NodePath("../../Player")
run_monitor = NodePath("../../RunMonitor")

[node name="Minimap" parent="UILayer" instance=ExtResource("4_u66eo")]
custom_minimum_size = Vector2(400, 400)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="DebugMenu" parent="UILayer" instance=ExtResource("3_bx4mw")]
visible = false
